--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,19 @@
-amqp==5.1.1
-asgiref==3.8.1
-async-timeout==4.0.3
-attrs==24.2.0
-backports.zoneinfo==0.2.1
-billiard==4.1.0
-boto3==1.28.44
-botocore==1.31.44
-celery==5.3.4
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-cron-descriptor==1.4.0
-cryptography==42.0.7
-dj-database-url==2.1.0
-dj-email-url==1.0.6
-Django==4.2.17
-django-allauth==65.3.1
-django-celery-beat==2.5.0
-django-celery-results==2.5.1
-django-csp==3.7
-django-debug-toolbar==4.4.6
-django-environ==0.11.2
-django-sesame==3.2.1
-django-storages==1.14.4
-django-timezone-field==6.0.1
-exceptiongroup==1.2.2
+asgiref==3.7.2
+boto3==1.28.17
+botocore==1.31.17
+crispy-bootstrap5==0.7
+Django==4.2.3
+django-crispy-forms==2.0
+django-environ==0.10.0
+django-storages==1.13.2
 gunicorn==21.2.0
-h11==0.14.0
-idna==3.7
 jmespath==1.0.1
-kombu==5.3.2
-mock==5.1.0
-natsort==8.4.0
-newrelic==9.13.0
-numpy==1.24.4
-outcome==1.3.0.post0
 packaging==23.1
-pandas==2.0.3
-pillow==10.4.0
-prompt-toolkit==3.0.39
-psycopg2==2.9.7
-pycparser==2.22
-PyJWT==2.8.0
-PySocks==1.7.1
-pytesseract==0.3.13
-python-crontab==3.0.0
+Pillow==10.0.0
+psycopg2-binary==2.9.9
 python-dateutil==2.8.2
-pytz==2023.3.post1
-redis==5.0.0
-requests==2.31.0
-s3transfer==0.6.2
-selenium==4.27.1
-single-beat==0.6.3
+s3transfer==0.6.1
 six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
 sqlparse==0.4.4
-trio==0.27.0
-trio-websocket==0.11.1
-typing_extensions==4.12.2
 tzdata==2023.3
 urllib3==1.26.16
-vine==5.0.0
-wcwidth==0.2.6
-wsproto==1.2.0
