--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+
+django-allauth==65.3.1
 asgiref==3.7.2
 boto3==1.28.17
 botocore==1.31.17
-crispy-bootstrap5==0.7
 Django==4.2.3
-django-crispy-forms==2.0
 django-environ==0.10.0
 django-storages==1.13.2
 gunicorn==21.2.0
