--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-
+asgiref==3.8.1
+boto3==1.28.44
+botocore==1.31.44
 django-allauth==65.3.1
-asgiref==3.7.2
-boto3==1.28.17
-botocore==1.31.17
+django-environ==0.11.2
+django-storages==1.14.4
 Django==4.2.17
-django-environ==0.10.0
-django-storages==1.13.2
 gunicorn==21.2.0
 jmespath==1.0.1
 packaging==23.1
-Pillow==10.0.0
-psycopg2-binary==2.9.9
+pillow==10.4.0
+psycopg2==2.9.7
 python-dateutil==2.8.2
-s3transfer==0.6.1
+s3transfer==0.6.2
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
