--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ sqlparse==0.4.4
 tzdata==2023.3
 urllib3==1.26.16
 requests==2.26.0
+cffi==1.17.1
+cryptography==44.0.0
+jwt==1.3.1
+pycparser==2.22
