--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
 asgiref==3.8.1
+backports.zoneinfo==0.2.1
 boto3==1.28.44
 botocore==1.31.44
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==2.0.12
+cryptography==44.0.0
+Django==4.2.17
 django-allauth==65.3.1
 django-environ==0.11.2
 django-storages==1.14.4
-Django==4.2.17
 gunicorn==21.2.0
+idna==3.10
 jmespath==1.0.1
+jwt==1.3.1
 packaging==23.1
 pillow==10.4.0
 psycopg2==2.9.7
+pycparser==2.22
+pytesseract==0.3.13
 python-dateutil==2.8.2
+requests==2.26.0
 s3transfer==0.6.2
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.12.2
 tzdata==2023.3
 urllib3==1.26.16
-requests==2.26.0
-cffi==1.17.1
-cryptography==44.0.0
-jwt==1.3.1
-pycparser==2.22
