--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,11 @@ django-storages==1.14.4
 gunicorn==21.2.0
 idna==3.10
 jmespath==1.0.1
-jwt==1.3.1
 packaging==23.1
 pillow==10.4.0
 psycopg2==2.9.7
 pycparser==2.22
+PyJWT==2.9.0
 pytesseract==0.3.13
 python-dateutil==2.8.2
 requests==2.26.0
