--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,23 @@ cffi==1.17.1
 charset-normalizer==2.0.12
 cryptography==44.0.0
 Django==4.2.17
+django-allauth==65.3.1
 django-environ==0.11.2
 django-storages==1.14.4
 gunicorn==21.2.0
 idna==3.10
+imaplib2==3.6
 jmespath==1.0.1
+numpy==1.24.4
+opencv-python==4.11.0.86
 packaging==23.1
 pillow==10.4.0
 psycopg2==2.9.7
 pycparser==2.22
+PyJWT==2.9.0
 pytesseract==0.3.13
 python-dateutil==2.8.2
+requests==2.26.0
 s3transfer==0.6.2
 six==1.16.0
 sqlparse==0.4.4
